upload new skybox

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <a-scene>
       <a-sky
-        src="https://cdn.glitch.global/2bafe8a2-597d-4e28-abb9-ebb448b47b66/skybox.jpg?v=1722322193791"
+        src="Street View 360.jpg"
       ></a-sky>
 
       <a-camera position="0 0 0">
