--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <a-scene>
       <a-sky
-        src="Street View 360.jpg"
+        src="skybox.jpg"
       ></a-sky>
 
       <a-camera position="0 0 0">
