--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     </a-camera>
 
     <a-entity id="sphere-container"></a-entity>
-    <a-entity id="leftHand" laser-controls="hand: left" raycaster="objects: .raycastable"></a-entity>
-    <a-entity id="rightHand" laser-controls="hand: right" raycaster="objects: .raycastable" line="color: #118A7E"></a-entity>
-
+    
 
     <button id="redirect-button">Go Back</button>
   </a-scene>
@@ -124,7 +122,7 @@
     loadAndCreateSpheres(jsonUrl);
 
     document.querySelector('#redirect-button').addEventListener('click', function () {
-      window.location.href = 'https://zealous-puzzle-kumquat.glitch.me/';
+      window.location.href = 'responsive.html';
     });
   </script>
 </body>
