--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     loadAndCreateSpheres(jsonUrl);
 
     document.querySelector('#redirect-button').addEventListener('click', function () {
-      window.location.href = 'responsive.html';
+      window.location.href = 'responsiveui.html';
     });
   </script>
 </body>
