change skybox path

--- a/responsiveui.html
+++ b/responsiveui.html
@@ -16,7 +16,7 @@
       cursor="rayOrigin: mouse; fuse: false" raycaster="objects: .raycastable"
       info-message="htmlSrc: #messageText">
       <a-assets>
-        <img id="yourSkyboxImage" src="skybox.jpg" crossorigin="anonymous"/>
+        <img id="yourSkyboxImage" src="https://cdn.glitch.global/2bafe8a2-597d-4e28-abb9-ebb448b47b66/skybox.jpg?v=1722322193791" crossorigin="anonymous"/>
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
         <!--
           Image source: http://www.ghibli.jp/works/kazetachinu/#frame&gid=1&pid=1
