--- a/responsiveui.html
+++ b/responsiveui.html
@@ -58,7 +58,7 @@
          ></a-mixin>
       </a-assets>
 
-      <a-sky src="#yourSkyboxImage"></a-sky>
+      <a-sky src="#yourSkyboxImage" rotation="0 -130 0"></a-sky>
 
       <a-entity
         id="background"
