--- a/responsiveui.html
+++ b/responsiveui.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <title>Laser input UI</title>
     <meta name="description" content="Laser input UI • A-Frame">
-    <script src="aframe-master.js"></script>
+    <!-- <script src="aframe-master.js"></script> -->
     <script src="https://unpkg.com/aframe-environment-component@1.3.4/dist/aframe-environment-component.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-layout-component@5.3.0/dist/aframe-layout-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-template-component@3.2.1/dist/aframe-template-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-proxy-event-component@2.1.0/dist/aframe-proxy-event-component.min.js"></script>
+    
     <script src="info-message.js"></script>
     <script src="highlight.js"></script>
     <script src="info-panel.js"></script>
@@ -16,7 +22,7 @@
       cursor="rayOrigin: mouse; fuse: false" raycaster="objects: .raycastable"
       info-message="htmlSrc: #messageText">
       <a-assets>
-        <img id="yourSkyboxImage" src="https://cdn.glitch.global/2bafe8a2-597d-4e28-abb9-ebb448b47b66/skybox.jpg?v=1722322193791" crossorigin="anonymous"/>
+        <img id="yourSkyboxImage" src="skybox.jpg" crossorigin="anonymous"/>
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
         <!--
           Image source: http://www.ghibli.jp/works/kazetachinu/#frame&gid=1&pid=1
