--- a/responsiveui.html
+++ b/responsiveui.html
@@ -64,7 +64,8 @@
          ></a-mixin>
       </a-assets>
 
-      <a-sky src="#yourSkyboxImage" rotation="0 -130 0"></a-sky>
+      <a-sky src="#yourSkyboxImage" rotation="0 -130 0" animation__fade="property: components.material.material.color; type: color; from: #FFF; to: #000; dur: 300; startEvents: fade"
+      animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
       <a-entity
         id="background"
