--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
       </a-assets>
 
       <!-- 360-degree image. -->
-      <a-sky id="image-360" radius="10" src="#city"
+      <a-sky id="image-360" radius="10" src="https://cdn.glitch.global/2bafe8a2-597d-4e28-abb9-ebb448b47b66/skybox.jpg?v=1722322193791"
              animation__fade="property: components.material.material.color; type: color; from: #FFF; to: #000; dur: 300; startEvents: fade"
              animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade"></a-sky>
 
